RESOLVED FIXED232689
Crash when opening and closing color picker while resetting form
https://bugs.webkit.org/show_bug.cgi?id=232689
Summary Crash when opening and closing color picker while resetting form
Aditya Keerthi
Reported 2021-11-03 16:34:10 PDT
...
Attachments
Patch (5.11 KB, patch)
2021-11-03 16:36 PDT, Aditya Keerthi
simon.fraser: review+
Patch for landing (5.11 KB, patch)
2021-11-03 16:51 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-11-03 16:34:26 PDT
Aditya Keerthi
Comment 2 2021-11-03 16:36:50 PDT
Simon Fraser (smfr)
Comment 3 2021-11-03 16:40:04 PDT
Comment on attachment 443252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=443252&action=review > LayoutTests/fast/forms/color/color-input-reset-crash.html:27 > + await UIHelper.delayFor(interval); Can we make this test take less than 1000ms?
Aditya Keerthi
Comment 4 2021-11-03 16:51:11 PDT
Created attachment 443254 [details] Patch for landing
Aditya Keerthi
Comment 5 2021-11-03 16:52:10 PDT
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 443252 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=443252&action=review > > > LayoutTests/fast/forms/color/color-input-reset-crash.html:27 > > + await UIHelper.delayFor(interval); > > Can we make this test take less than 1000ms? Reduced to 100ms, after verifying the test still fails without the fix.
EWS
Comment 6 2021-11-04 13:35:54 PDT
Committed r285306 (243885@main): <https://commits.webkit.org/243885@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443254 [details].
Note You need to log in before you can comment on or make changes to this bug.